# q-swarm

./: .gitignore  README.md
docs/: README.md  Structure.md  doc.txt  environment.md  nyarigyak_beszamolo.md  push_pull.md
docs/LaTeX/: References.bib  main.tex
docs/push_pull/: push_pull.md
docs/qlearn/: qlearn.md  states.puml
experiments/: .gitignore  CMakeLists.txt  Qmat.txt  README.md  copy_logs.py  foraging.txt  qswarm.sh
experiments/controllers/: CMakeLists.txt
experiments/controllers/footbot_qlearn_diy/: CMakeLists.txt  footbot_qlearn_diy.cpp  footbot_qlearn_diy.h  qlearner.hpp  thread_safe_random.hpp
experiments/controllers/footbot_qlearn_diy/loop_functions/: CMakeLists.txt
experiments/loop_functions/manual_control/: CMakeLists.txt  manual_qtuser_functions.cpp  manual_qtuser_functions.h
experiments/loop_functions/quarantine/: CMakeLists.txt  quarantine_qtuser_functions.cpp  quarantine_qtuser_functions.h
experiments/monitoring/: CMakeLists.txt  (+1 more)
experiments/qlearner/: CMakeLists.txt  action.hpp  agent_type.hpp  follower_action.hpp  follower_state.hpp  qexploiter.hpp  ql_math_utils.hpp  ql_utils.hpp  qlearner.hpp  stage.hpp  state.hpp  thread_safe_random.hpp  vector.hpp
experiments/qlearner/action/: action.hpp  high_level_action.hpp  low_level_action.hpp
experiments/qlearner/state/: follower_state.hpp  simple_state.hpp  state.hpp
measurements/: fba1.csv  fba2.csv  fba3.csv  fba4.csv  fba5.csv  fba6.csv  fba7.csv  fba8.csv  fba9.csv  follow-leader1.csv  follow-leader2.csv  follow-train.csv  leader-train.csv  leaderA.csv  meas.txt
proto/: README.md  room_qlearning.js
(+4492 files in other folders)
